# 1C-LykovAddInNative

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  lykovAddInNative.def  vcpkg.json
dllResult/: test.epf
dllResult/lykovAddInNative_ExtFunctions/: MANIFEST.XML
dllResult/lykovAddInNative_HTTPClient/: MANIFEST.XML
dllResult/lykovAddInNative_MySQL/: MANIFEST.XML
dllResult/lykovAddInNative_PostgreSQL/: MANIFEST.XML
include/baseClass/: baseClassForExtension.hpp  baseExtensionClass.hpp  convertingString.hpp  encrypt.hpp  globalFunctions.hpp  lykovAddInNative.hpp  lykovExceptions.hpp  stdafx.hpp
include/baseClass/from1C/: ComponentBase.h  IMemoryManager.h  types.h
include/extensions/: HTTPClient.hpp  extensionBaseFunction.hpp  extensionBaseFunctions.hpp  mySQLConn.hpp  pdfEditor.hpp  postgreSQL.hpp
include/forConfigure/: LykovAddInNative.def.in  LykovAddInNative.rc.in
include/from1C/: AddInDefBase.h  ComponentBase.h  com.h
src/baseClass/: baseClassForExtension.cpp  baseExtensionClass.cpp  convertingString.cpp  dllExport.cpp  dllmain.cpp  encrypt.cpp  globalFunctions.cpp  lykovAddInNative.cpp  lykovExceptions.cpp
src/extensions/: HTTPClient.cpp  extensionBaseFunction.cpp  extensionBaseFunctions.cpp  mySQLConn.cpp  pdfEditor.cpp  postgreSQL.cpp
tests/: Тест компоненты.epf
